--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -38,8 +38,18 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y apt-transport-https
         sudo apt-get install -y conntrack
+
+      #Install crictl
+        CRICTL_VERSION="v1.24.0"  # You can check for the latest version
+        sudo curl -LO "https://github.com/kubernetes-sigs/cri-tools/releases/download/${CRICTL_VERSION}/crictl-${CRICTL_VERSION}-linux-amd64.tar.gz"
+        sudo tar -C /usr/local/bin -xzvf "crictl-${CRICTL_VERSION}-linux-amd64.tar.gz"
+        sudo chmod +x /usr/local/bin/crictl
+            
+      # Install minikube
         curl -LO https://storage.googleapis.com/minikube/releases/latest/minikube-linux-amd64
         sudo install minikube-linux-amd64 /usr/local/bin/minikube
+             
+      # Install kubectl
         curl -LO https://storage.googleapis.com/kubernetes-release/release/`curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt`/bin/linux/amd64/kubectl
         sudo install kubectl /usr/local/bin/
 
@@ -55,3 +65,8 @@ jobs:
       run: |
         kubectl apply -f k8s/deployment.yaml
         kubectl apply -f k8s/service.yaml
+
+    - name: Verify Deployment
+      run: |
+        kubectl get pods
+        kubectl get services
